fixed fifo in es1